Bug 1148660 - Correct the handling of glyph positioning offsets in vertical-upright mode. r=jdaggett